refactor: 合并data和pageInfo, 统一放在data中